Produzione/force-app/main/default/objects/Configurazione_App__c/fields/Campo_Booleano__c.field-meta.xml
<CustomField>
    <fullName>Campo_Booleano__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Campo Booleano</label>
    <type>Checkbox</type>
</CustomField>