Produzione/force-app/main/default/objects/Configurazione_App__c/fields/Campo_Data__c.field-meta.xml
<CustomField>
    <fullName>Campo_Data__c</fullName>
    <label>Campo Data</label>
    <type>Date</type>
</CustomField>