Produzione/force-app/main/default/objects/Configurazione_App__c/fields/Campo_Data_Ora__c.field-meta.xml
<CustomField>
    <fullName>Campo_Data_Ora__c</fullName>
    <label>Campo Data Ora</label>
    <type>DateTime</type>
</CustomField>