Produzione/force-app/main/default/objects/Configurazione_App__c/fields/Campo_Numerico__c.field-meta.xml
<CustomField>
    <fullName>Campo_Numerico__c</fullName>
    <label>Campo Numerico</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>