Produzione/force-app/main/default/objects/Configurazione_App__c/fields/Campo_Testuale__c.field-meta.xml
<CustomField>
    <fullName>Campo_Testuale__c</fullName>
    <label>Campo Testuale</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>