Produzione/force-app/main/default/objects/Configurazione_App__c/fields/Chiave__c.field-meta.xml
<CustomField>
    <fullName>Chiave__c</fullName>
    <label>Chiave</label>
    <length>100</length>
    <type>Text</type>
</CustomField>