Produzione/force-app/main/default/objects/Configurazione_App__c/fields/Tipologia_Campo__c.field-meta.xml
<CustomField>
    <fullName>Tipologia_Campo__c</fullName>
    <label>Tipologia Campo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Numerico</fullName>
            </value>
            <value>
                <fullName>Testuale</fullName>
            </value>
            <value>
                <fullName>Booleano</fullName>
            </value>
            <value>
                <fullName>Data</fullName>
            </value>
            <value>
                <fullName>Data Ora</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>