Produzione/force-app/main/default/objects/Configurazione_App__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Sezione__c</columns>
    <columns>Chiave__c</columns>
    <columns>Tipologia_Campo__c</columns>
    <columns>Campo_Testuale__c</columns>
    <columns>Campo_Numerico__c</columns>
    <columns>Campo_Data_Ora__c</columns>
    <columns>Campo_Data__c</columns>
    <columns>Campo_Booleano__c</columns>
    <columns>App__c</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <label>Tutto</label>
</ListView>